Defect DS-540 fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 <div class="login-animation" *ngIf="commonService?.landingAnimation">
     <img src="assets/img/login_animation.gif" alt="">
     <p class="text-secondary">Hang on, please, we're brewing something for you.</p>
-    <p class="text-bottom">Appveen © {{year}}. All rights reserved.</p>
+    <p class="text-bottom">DataNimbus © {{year}}. All rights reserved.</p>
 </div>
 <div class="session-refresh overlay align-items-center justify-content-center" [class.show]="showStallLoader">
     <div class="message-box">
