--- a/src/app/home/api-keys/api-keys-manage/api-keys-manage.component.html
+++ b/src/app/home/api-keys/api-keys-manage/api-keys-manage.component.html
@@ -28,11 +28,11 @@
     </div>
     <div class="content">
         <div class="tab-list d-flex align-items-center border rounded">
-            <div [ngClass]="{'active fw-500':activeTab==0}" class="tab-list-item hover px-3 py-2"
+            <div [ngClass]="{'active fw-500':activeTab==0}" class="tab-list-item hover px-3 py-2 mr-2"
                 (click)="activeTab=0;">
                 Data Service
             </div>
-            <div [ngClass]="{'active fw-500':activeTab==1}" class="tab-list-item hover px-3 py-2"
+            <div [ngClass]="{'active fw-500':activeTab==1}" class="tab-list-item hover px-3 py-2 mr-2"
                 (click)="activeTab=1;">
                 Functions
             </div>
