--- a/src/app/home/insight/api-logs/ag-grid-cell/ag-grid-cell.component.scss
+++ b/src/app/home/insight/api-logs/ag-grid-cell/ag-grid-cell.component.scss
@@ -10,7 +10,7 @@
       color: $green;
     }
     &.pending {
-      color: $orange;
+      color: $primary;
     }
     &.maintenance {
       color: $light;
