--- a/src/app/home/insight/dataservice-logs/ag-grid-cell/ag-grid-cell.component.scss
+++ b/src/app/home/insight/dataservice-logs/ag-grid-cell/ag-grid-cell.component.scss
@@ -10,7 +10,7 @@
       color: $green;
     }
     &.redirect {
-      color: $orange;
+      color: $primary;
     }
     &.error {
       color: $red;
