--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -70,9 +70,10 @@
 
         .logo {
             width: 284px;
-            height: 84px;
+            height: 56px;
             background-size: 250px;
             background-position: center;
+            background-repeat: no-repeat;
         }
 
         .title {
