--- a/src/assets/scss/toastr.scss
+++ b/src/assets/scss/toastr.scss
@@ -160,7 +160,7 @@
     background-color: $red;
   }
   .toast-info {
-    background-color: $blue;
+    background-color: $primary40;
   }
   .toast-warning {
     background-color: $orange;
