--- a/src/app/home/local-bot/local-bot.component.html
+++ b/src/app/home/local-bot/local-bot.component.html
@@ -29,7 +29,7 @@
       <div class="col-3 bots border-right pr-0">
         <div *ngFor="let bot of botRecords; let i = index" class="d-flex" [id]="'bot' + i" (click)="selectRecord(bot)">
           <div class="selectedTab" [ngStyle]="{
-              background: bot._id === selectedBot?._id ? '#ff6f00' : 'none'
+              background: bot._id === selectedBot?._id ? '#3B5AAA' : 'none'
             }"></div>
           <div class="d-flex flex-column p-4 list-hover col" [ngClass]=" { selected: bot._id===selectedBot?._id }">
             <span class="font-normal fw-600 heading"> {{ bot.basicDetails?.name }}</span>
@@ -121,8 +121,8 @@
             <div class="bot-img mb-4"></div>
             <span class="mx-auto font-20 fw-600 heading">Create Bots</span>
             <div class="mt-3 align-items-center text-muted text-center font-normal sub-heading">
-              Bots provide API-only access into data.stack. Other
-              applications/systems can use Bot credentials to access data.stack.
+              Bots provide API-only access into datanimbus.io. Other
+              applications/systems can use Bot credentials to access datanimbus.io.
               Click on Add bots, to start creating bots for the app
             </div>
             <button class="btn mt-3 btn-primary d-flex" (click)="isCreate = true" *ngIf="hasPermission('PMBBC')">
