--- a/src/assets/scss/home.scss
+++ b/src/assets/scss/home.scss
@@ -3,80 +3,87 @@
 @import "src/assets/scss/bootstrap/_variables.scss";
 
 @font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-Regular.ttf") format("truetype");
+  font-family: "Manrope";
+  src: url("../fonts/manrope/Manrope-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-Medium.ttf") format("truetype");
+  font-family: "Manrope";
+  src: url("../fonts/manrope/Manrope-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-SemiBold.ttf") format("truetype");
+  font-family: "Manrope";
+  src: url("../fonts/manrope/Manrope-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
 }
 
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: "Manrope";
+//   src: url("../fonts/manrope/Manrope-Bold.ttf") format("truetype");
+//   font-weight: 700;
+//   font-style: normal;
+// }
+
+// @font-face {
+//   font-family: "Manrope";
+//   src: url("../fonts/manrope/Manrope-Black.ttf") format("truetype");
+//   font-weight: 800;
+//   font-style: normal;
+// }
 
 @font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-Black.ttf") format("truetype");
-  font-weight: 800;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-ExtraBold.ttf") format("truetype");
+  font-family: "Manrope";
+  src: url("../fonts/manrope/Manrope-ExtraBold.ttf") format("truetype");
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-ExtraLight.ttf") format("truetype");
+  font-family: "Manrope";
+  src: url("../fonts/manrope/Manrope-Bold.ttf") format("truetype");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Manrope";
+  src: url("../fonts/manrope/Manrope-ExtraLight.ttf") format("truetype");
   font-weight: 200;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-Light.ttf") format("truetype");
+  font-family: "Manrope";
+  src: url("../fonts/manrope/Manrope-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
 }
 
-@font-face {
-  font-family: "Inter";
-  src: url("../fonts/inter/Inter-Thin.ttf") format("truetype");
-  font-weight: 100;
-  font-style: normal;
-}
+// @font-face {
+//   font-family: "Manrope";
+//   src: url("../fonts/manrope/Manrope-Thin.ttf") format("truetype");
+//   font-weight: 100;
+//   font-style: normal;
+// }
 
 
 // @font-face {
-//   font-family: "Inter";
-//   src: url("../fonts/inter/Inter-Regular.ttf") format("truetype"),
-//     url("../fonts/inter/Inter-Medium.ttf") format("truetype"),
-//     url("../fonts/inter/Inter-SemiBold.ttf") format("truetype"),
-//     url("../fonts/inter/Inter-Bold.ttf") format("truetype"),
-//     url("../fonts/inter/Inter-Black.ttf") format("truetype"),
-//     url("../fonts/inter/Inter-ExtraBold.ttf") format("truetype"),
-//     url("../fonts/inter/Inter-ExtraLight.ttf") format("truetype"),
-//     url("../fonts/inter/Inter-Light.ttf") format("truetype"),
-//     url("../fonts/inter/Inter-Thin.ttf") format("truetype");
+//   font-family: "Manrope";
+//   src: url("../fonts/manrope/Manrope-Regular.ttf") format("truetype"),
+//     url("../fonts/manrope/Manrope-Medium.ttf") format("truetype"),
+//     url("../fonts/manrope/Manrope-SemiBold.ttf") format("truetype"),
+//     url("../fonts/manrope/Manrope-Bold.ttf") format("truetype"),
+//     url("../fonts/manrope/Manrope-Black.ttf") format("truetype"),
+//     url("../fonts/manrope/Manrope-ExtraBold.ttf") format("truetype"),
+//     url("../fonts/manrope/Manrope-ExtraLight.ttf") format("truetype"),
+//     url("../fonts/manrope/Manrope-Light.ttf") format("truetype"),
+//     url("../fonts/manrope/Manrope-Thin.ttf") format("truetype");
 // }
 
 // Hiding spinner on input of number
@@ -130,12 +137,12 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .logo {
   // background-image: url("../img/data.stack_author_light_optimized.svg");
-  background-image: url("../img/logo_default.svg");
+  background-image: url("../img/datanimbus-author.svg");
 }
 
 .logo-mini {
   // background-image: url("../img/data.stack_author_light_optimized.svg");
-  background-image: url("../img/logo-mini.svg");
+  background-image: url("../img/datanimbus-author-mini.svg");
 }
 
 .login-img {
