--- a/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
+++ b/src/app/home/b2b-flows-manage/flow-node/flow-node.component.html
@@ -1,6 +1,6 @@
 <svg>
     <g class="node-block" [style]="'transform: translate('+currNode.coordinates.x+'px,'+ currNode.coordinates.y+'px)'"
-        class="hover no-outline " [attr.data-id]="currNode._id" [tabIndex]="index" (keydown.delete)="deletePath()">
+        class="hover no-outline " [attr.data-id]="currNode._id" [tabIndex]="index">
         <g [class.active]="isSelected" [attr.data-id]="currNode._id">
             <rect x="0" y="-18" width="140" height="24" rx="4" (click)="openProperties($event)"
                 [attr.data-id]="currNode._id" class="id-holder" />
