fix(search-box): Enable search in author screens
Ensure the searching from search-box in all author screens by setting
the 'readonly' attribute to false. This resolves an issue introduced by
DS-32, where 'edit.status' is used to restrict editing in certain views.
Jira Issue: DS-546

--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -13,7 +13,7 @@
             <span></span>
         </div>
         <div class="d-flex align-items-center">
-            <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null"></odp-search-box>
+            <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null" [edit]="{status:true}"></odp-search-box>
             <button type="button" id="data-management" class="btn btn-white d-flex align-items-center border ml-3"
                 [routerLink]="['settings']">
                 <span class="dsi dsi-settings text-secondary"></span>
