--- a/src/app/home/agents/agents.component.html
+++ b/src/app/home/agents/agents.component.html
@@ -11,7 +11,7 @@
     <div class="options d-flex justify-content-between align-items-center w-100 pt-2 mb-4">
         <div class="fw-600 font-22">Agents</div>
         <span class="d-flex align-items-center">
-            <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null"></odp-search-box>
+            <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null" [edit]="{status:true}"></odp-search-box>
             <button *ngIf="hasCreatePermission('AGENT')" type="button"
                 class="btn btn-primary ml-3 d-flex align-items-center" (click)="newAgent()">
                 <span class="dsi dsi-plus mr-2"></span>
