--- a/src/app/home/api-keys/api-keys-list/api-keys-list.component.html
+++ b/src/app/home/api-keys/api-keys-list/api-keys-list.component.html
@@ -14,7 +14,7 @@
             <span *ngIf="searchTerm" ngbTooltip="Filter Applied" class="dsi dsi-filter-alt text-secondary ml-2"></span>
         </div>
         <div class="d-flex align-items-center">
-            <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null"></odp-search-box>
+            <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null" [edit]="{status:true}"></odp-search-box>
             <button type="button" id="addNewDS" class="add-new btn btn-primary ml-3 d-flex align-items-center"
                 (click)="newKeyForm()" *ngIf="hasPermission('PMUBC')">
                 <span class="dsi dsi-plus mr-2"></span>
