--- a/src/app/home/control-panel/user-group/user-group.component.html
+++ b/src/app/home/control-panel/user-group/user-group.component.html
@@ -14,7 +14,7 @@
       <span *ngIf="searchTerm" ngbTooltip="Filter Applied" class="dsi dsi-filter-alt text-secondary ml-2"></span>
     </div>
     <div class="d-flex align-items-center">
-      <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null"></odp-search-box>
+      <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null" [edit]="{status:true}"></odp-search-box>
       <!-- <odp-search-box (enteredText)="searchGroup($event)" (reset)="resetSearch()"></odp-search-box> -->
       <button class="add-new btn btn-primary ml-3 d-flex align-items-center justify-content-center"
         (click)="addNewGroup()" *ngIf="hasPermission('PMGBC')">
