--- a/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
+++ b/src/app/home/local-bot/manage-bot-property/manage-bot-property.component.html
@@ -12,7 +12,7 @@
 <div class="d-flex mb-4">
     <div>
         <odp-search-box (enteredText)="enterToSelect($event)" (reset)="enterToSelect(null)" [selectOnEnter]="true"
-            [open]="true">
+            [open]="true" [edit]="{status:true}">
         </odp-search-box>
     </div>
     <div class="d-flex ml-auto mr-2">
