Defect DS-444 re-open fix

--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/connector-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/connector-properties.component.html
@@ -30,9 +30,10 @@
         [currNode]="currNode"></odp-mongodb-connector>
 </ng-container>
 <div *ngIf="!selectedConnector" class="data-format-selector-wrapper">
-    <!-- <label class="text-dark font-14 fw-400">Connectors</label> -->
+    <label class="text-secondary" for="connectorSelector">Select Connector
+    </label>
     <div>
-        <odp-search-box open="true" (enteredText)="searchConnector($event)" (reset)="clearSearch()"
+        <odp-search-box open="true" (enteredText)="searchConnector($event)" (reset)="clearSearch()" [edit]="edit"
             (keydown.delete)="$event.stopPropagation();"></odp-search-box>
     </div>
     <div class="list-group my-3">
