--- a/src/app/home/b2b-flows-manage/node-properties/connector-properties/connector-properties.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/connector-properties/connector-properties.component.scss
@@ -1,4 +1,4 @@
-.list-group {
-    max-height: 232px;
-    overflow: auto;
-}
+// .list-group {
+//     max-height: 232px;
+//     overflow: auto;
+// }
